align fix

--- a/css/geoStyle.css
+++ b/css/geoStyle.css
@@ -23,22 +23,30 @@ path:hover {
 #mapOnly {
   /* display:inline ; */
   /* padding-left: 30%; */
-  margin: auto;
+  /* margin-right:auto;
+  margin-left:auto; */
+  /* margin: auto; */
 }
 
 div #vizMap {
   vertical-align: middle;
-  /* display: inline; */
-  margin: auto;
+  /* display: block; */
+  margin-right:auto;
+  margin-left:auto;
+
+  /* margin:   auto; */
   width: 940px;
   height: 600px;
+  align-content:center;
 }
 
 #key {
   /* float: right; */
   /* padding-left: 100px; */
   /* position: relative; */
-  display: inline;
+  /* margin-right:auto;
+  margin-left:auto; */
+  /* display: inline; */
 }
 
 .axis text {
